--- a/UI/css/mystyle.css
+++ b/UI/css/mystyle.css
@@ -1,6 +1,16 @@
 body {
   font-family: "Noto Serif TC", sans-serif;
 }
+.label {
+  width: 0 auto;
+  padding: 10px;
+  border: 5px solid red;
+  border-radius: 10px;
+  background-color: white;
+  margin: 0 auto;
+  writing-mode: tb-rl;
+  font-size: 130%;
+}
 /*
 body {
     display: flex;
